--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,10 @@
 [build]
-  command = "yarn build"
+  command = "make build"
+  functions = "lambdas"
   publish = "dist"
 [build.environment]
   YARN_VERSION = "1.3.2"
+  GO_IMPORT_PATH = "github.com/aninternetof/one-click-hugo-cms"
 
 [context.deploy-preview]
   command = "yarn build-preview"
