Restructure go source files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 .vscode/
+.idea/
 node_modules/
 lambdas/
-src/github.com/
+src/
+!src/css
+!src/js
+!src/github.com/aninternetof
 src/golang.org/
 src/google.golang.org/
 src/cloud.google.com/
 src/gopkg.in/
-bin/colly
 pkg/
 instagram_mollyrose30/
 dist/
+bin/
 /npm-debug.log
 yarn-error.log
